@@ -33,17 +33,14 @@ RPMExportPage.selected_project_does_not_have_Makefile=The selected project does 
 RPMExportPage.Cannont_find_file=Cannont find the file: 
 RPMExportPage.Core_Exception=Core Exception: 
 RPMExportPage.SPEC_file=SPEC file
-RPMExportPage.Browse=Browse...
 RPMExportPage.Version=Version: 
 RPMExportPage.Release=\ \ Release: 
 RPMExportPage.project_to_export_to_RPM=Select a project to export to RPM
 RPMExportPage.No_c/c++_projects_found=---> No c/c++ projects found <--
 RPMExportPage.Invald_project_specified_(not_c/c++)=Invald project specified (not_c/c++)
-RPMExportPage.Errors_importing_SRPM=Errors encountered importing the SRPM
 RPMExportPage.Select_project=Select a project ...
 RPMExportPage.No_c/c++_projects_found_2=---> No c/c++ projects found <---
 RPMExportPage.Binary_RPM_filename=Binary RPM filename
-RPMExportPage.Build_Options=Build Options
 RPMExportPage.Preserve_RPM_environment=Preserve RPM build environment
 RPMExportPage.Gen_build_log_file=Generate build output log file
 RPMExportPage.Composite_Export_Type=Composite Export Type
@@ -63,12 +60,14 @@ SRPMImportPage.Errors_importing_SRPM=Errors encountered importing the SRPM
 SRPMImportPage.Preserve_SRPM_envionment=Preserve SRPM envionment
 SRPMImportPage.Create_logfile_operations=Create a logfile of operations
 SRPMImportPage.Browse=Browse...
+SRPMImportPage.Errors_importing_SRPM=Errors encountered importing the SRPM
 SRPMImportPage.Errors_importing_SRPM_2=Errors encountered importing the SRPM
 SRPMImportPage.ApplyPatches=Apply all patches to pristine source
 SRPMImportPage.runAutoConf=Run AutoConf (configure) if applicable
 SRPMImportPage.preserveRPMenvironment=Preserve RPM environment
 SRPMImportPage.Source_not_Valid=Source File is not a valid file
 SRPMImportPage.No_src_rpm_ext=Filename does not have src.rpm extension
+SRPMImportPage.Build_Options=Build Options
 SRPMImportwizard.Import_an_SRPM=Import an SRPM
 
 
@@ -104,10 +103,7 @@ RPMExportPage.Patch_have_descriptive_tag=Patch must have a short descriptive tag
 RPMExportPage.Patch_tag_cannot_have_spaces=Patch tag cannot have any spaces
 RPMExportPage.Patch_must_have_changelog=Patch must have a changelog entry
 RPMExportPage.Errors_encountered_importing_SRPM=Errors encountered importing the SRPM
-RPMExportPage.Select_a_project=Select a project ...
-RPMExportPage.No_c/c++_projects_found_2=---> No c/c++ projects found <---
 RPMExportPage.SPEC_file=SPEC file
-RPMExportPage.Browse=Browse...
 RPMExportPage_2.0=Enter patch/changelog information for spec file
 RPMExportPage_2.1=Patch Tag cannot have a special character\!
 RPMExportPage_2.2=Enter patch/changelog information for spec file
@@ -125,9 +121,6 @@ RPMExportPage.Patch_Changelog=Changelog Comment:
 RPMExportPage.Version=\ \Version: 
 RPMExportPage.Release=\ \Release:
 RPMExportPage.RPM_Export_Filename=RPM Export Filename
-RPMExportPage.Build_Options=Build Options
-RPMExportPage.Preserve_RPM_build_environment=Preserve RPM build environment
-RPMExportPage.Generate_build_output_log=Generate build output log file
 RPMExportPage.groupPatchTitle=Patch Needed
 RPMExportPage.needPatch_Project=The project
 RPMExportPage.needPatch_desc=\ has changed since last imported as an SRPM. To continue export\nas an SRPM, you will have to generate a patch (on the next page)
@@ -143,6 +136,12 @@ RPMExportPage.toolTip_Release=The Release associated with this RPM.\nChange the 
 RPMExportPage.toolTip_Patch_Tag=Patch Tag - unique identifier for patch. Combined with the\npackage name and the version number to form the patch name. \n\nExample:\npump-1.1-exampletag.patch. \n\nThe 'exampletag' would be your tag.
 RPMExportPage.toolTip_Changelog_Stamp=Changelog Date - Date stamp for the changelog entry. \n\nExample: * Wed Oct 12 2003 -- John Doe <jdoe@redhat.com>
 RPMExportPage.toolTip_Changelog=Changelog Comment - short descriptive summary of change made in patch\n\nExample: - Fixed bugzilla entry #125642
+
+RPMPage.Browse=Browse...
+RPMPage.Select_a_project=Select a project ...
+RPMPage.No_c/c++_projects_found_2=---> No c/c++ projects found <---
+
+
 RPMExportWizard.Export_an_SRPM=Export an SRPM
 
 SRPMImportOperation.Starting=Starting ...
